Fix article footer spacing on short posts

--- a/_sass/_article.scss
+++ b/_sass/_article.scss
@@ -202,6 +202,11 @@
   }
 }
 
+.article-main {
+  min-width: 0;
+  align-self: start;
+}
+
 .article-body {
   min-width: 0; // Evitar overflow en grids
 }
